# jarvis

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/core/: agent.rs  mod.rs  ollama.rs
src/model/: client.rs  context.rs  message.rs  mod.rs  provider.rs
src/modules/: arithmetic.rs  math.rs  mod.rs  module.rs  registry.rs
src/providers/: mod.rs
src/providers/ollama/: client.rs  config.rs  mod.rs  ollama_api.rs  provider.rs  types.rs
src/streaming/: cli_streamer.rs  mod.rs  null_streamer.rs  streamer.rs
src/utils/: functions.rs  logger.rs  mod.rs
