[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
thiserror = "2.0.12"
log = "0.4.27"
dotenv = "0.15.0"
flexi_logger = "0.31.2"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio-util = "0.7.15"
futures-util = "0.3.31"
tokio-stream = {version = "0.1.17", features = ["io-util"]}
async-trait = "0.1.88"
evalexpr = {version = "12.0.2", features = ["serde"]}
regex = "1.11.1"
